header z-index fixed

--- a/css/main.css
+++ b/css/main.css
@@ -336,6 +336,7 @@ img {
   border: 1px solid #ECECEC;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 .header-container {
   display: flex;
